objects/tspa__SessionLobbyConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>tspa__Data_Type__c</fullName>
        <label>Data Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Dutch_Value__c</fullName>
        <label>Dutch Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__French_Value__c</fullName>
        <label>French Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__German_Value__c</fullName>
        <label>German Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Greek_Value__c</fullName>
        <label>Greek Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Hebrew_Value__c</fullName>
        <label>Hebrew Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Hungarian_Value__c</fullName>
        <label>Hungarian Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Italian_Value__c</fullName>
        <label>Italian Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Japanese_Value__c</fullName>
        <label>Japanese Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Korean_Value__c</fullName>
        <label>Korean Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Polish_Value__c</fullName>
        <label>Polish Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Portuguese_Value__c</fullName>
        <label>Portuguese Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Russian_Value__c</fullName>
        <label>Russian Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Slovak_Value__c</fullName>
        <label>Slovak Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tspa__Spanish_Value__c</fullName>
        <label>Spanish Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Swedish_Value__c</fullName>
        <label>Swedish Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Thai_Value__c</fullName>
        <label>Thai Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Turkish_Value__c</fullName>
        <label>Turkish Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Value__c</fullName>
        <label>English Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>VRA - Session Lobby Config</label>
</CustomObject>